# Zippy

./: .gitignore  CMakeLists.txt  test.txt
src/: hoffman  hoffman.cpp  huffman  huffman.cpp  main
src/hoffman.dSYM/Contents/: Info.plist
src/hoffman.dSYM/Contents/Resources/DWARF/: hoffman
src/hoffman.dSYM/Contents/Resources/Relocations/aarch64/: hoffman.yml
